--- a/src/main/resources/templates/index3.html
+++ b/src/main/resources/templates/index3.html
@@ -8,30 +8,37 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <style>
-        .carousel-inner img {
-            width: 100%;
-            height: 150px;
-        }
-    </style>
 </head>
 <body>
 
+<center>
 
-<div id="demo" class="carousel slide column-header flex-column" data-ride="carousel">
+<div id="demo" class="carousel slide column-header flex-column" data-ride="carousel" data-interval="999">
     <!-- The slideshow -->
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://images.tinypic.pl/i/01007/s6ig8qtxdeju.png" alt="1" width="100%" height="150">
+            <img src="https://images.tinypic.pl/i/01007/s6ig8qtxdeju.png" alt="1" width="100%" height="250">
+            <div class="carousel-caption" style="margin-top: -20px;">
+                <a class="emboss-txt" href="http://localhost:8081/" style="margin-top: -10px;">Assicurator - porównywanie cen ubezpieczeń</a>
+            </div>
         </div>
         <div class="carousel-item">
-            <img src="https://images.tinypic.pl/i/01007/478f9ft21qo8.png" alt="2" width="100%" height="150">
+            <img src="https://images.tinypic.pl/i/01007/478f9ft21qo8.png" alt="2" width="100%" height="250">
+            <div class="carousel-caption" style="margin-top: -20px;">
+                <a class="emboss-txt" href="http://localhost:8081/" style="margin-top: -10px;">Assicurator - porównywanie cen ubezpieczeń</a>
+            </div>
         </div>
         <div class="carousel-item">
-            <img src="https://files.tinypic.pl/i/01007/gux7x64dw38m.png" alt="3" width="100%" height="150">
+            <img src="https://files.tinypic.pl/i/01007/gux7x64dw38m.png" alt="3" width="100%" height="250">
+            <div class="carousel-caption" style="margin-top: -20px;">
+                <a class="emboss-txt" href="http://localhost:8081/" style="margin-top: -10px;">Assicurator - porównywanie cen ubezpieczeń</a>
+            </div>
         </div>
         <div class="carousel-item">
-            <img src="https://files.tinypic.pl/i/01007/cjpc4nl0ll2m.png" alt="4" width="100%" height="150">
+            <img src="https://files.tinypic.pl/i/01007/cjpc4nl0ll2m.png" alt="4" width="100%" height="250">
+            <div class="carousel-caption" style="margin-top: -20px;">
+                <a class="emboss-txt" href="http://localhost:8081/" style="margin-top: -10px;">Assicurator - porównywanie cen ubezpieczeń</a>
+            </div>
         </div>
     </div>
     <!-- The slideshow -->
@@ -39,18 +46,13 @@
 
 
 
+<br><br/>
 
-<div class="jumbotron d-flex align-items-center min-vh-100">
-    <div class="container text-center">
-
-
-
-
-
-
+<div class="jumbotron align-items-center" style="width:30%; height:220%; border-radius: 64px;">
+    <div class="container-fluid text-center">
 
             <center>
-
+                <h1>Najlepsze ubezpieczenie:</h1><br/>
                 <table class="blueTable">
                     <thead>
                     <tr>
@@ -59,14 +61,14 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="wynikii : ${wyniki}">
+                    <tr>
                         <td th:text="${najlepszyUbezpieczycielNazwa}"></td>
-                        <td th:text="${najlepszyUbezpieczycielCena}"></td>
+                        <td th:text="${najlepszyUbezpieczycielCena}"> zł</td>
                     </tr>
                     </tbody>
                     </tr>
                 </table>
-
+                <br><br><br/><h1>Porównanie cen ubezpieczeń:</h1><br/>
 
                 <table class="blueTable">
                     <thead>
@@ -78,39 +80,43 @@
                     <tbody>
                     <tr th:each="wynikii : ${wyniki}">
                         <td th:text="${wynikii.nazwa}"></td>
-                        <td th:text="${wynikii.cena}"></td>
+                        <td th:text="${wynikii.cena}"> zł</td>
                     </tr>
                     </tbody>
                     </tr>
                 </table>
 
+                <a href="http://localhost:8081/" class="btn btn-primary">Powrót do wyboru samochodu</a>
+                <a href="javascript:history.go(-1)" class="btn btn-success">Powrót do wyboru opcji wcześniej wybranego samochodu</a>
 
 
             </center>
 
-
-
-
         </div>
     </div>
 
-<center>
-    <h2 style="color:white">2020</h2>
 </center>
-<br>
+
+
+
 </body>
 
 <style>
     table.blueTable {
         font-family: Tahoma, Geneva, sans-serif;
-        border: 6px solid #185E8C;
+        border: 4px solid black;
         background-color: #EEEEEE;
-        width: 100%;
-        height: 200%;
-        text-align: left;
+        width: 102%;
+        height: 205%;
+        text-align: center;
+    }
+    table{
+        order-collapse: separate;
+        border-radius: 25px;
+        -moz-border-radius: 25px;
     }
     table.blueTable td, table.blueTable th {
-        border: 2px solid #FFFFFF;
+        border: 2px solid black;
         padding: 10px 3px;
     }
     table.blueTable tbody td {
@@ -145,16 +151,71 @@
     table.blueTable tfoot .links {
         text-align: right;
     }
-    table.blueTable tfoot .links a{
+    table.blueTable tfoot .links a {
         display: inline-block;
         background: #1C6EA4;
         color: #FFFFFF;
         padding: 2px 8px;
         border-radius: 5px;
     }
+    .carousel-inner img {
+        width: 100%;
+        height: 150px;
+    }
+    .carousel-caption {
+        transform: translateY(-50%);
+        bottom: 0;
+        top: 50%;
+    }
+
+    .emboss-txt {
+        position: relative;
+        font-size: 50px;
+        font-family: "Berlin Sans FB";
+        letter-spacing: 5px;
+        color:rgb(207,207,207);
+        text-shadow:
+            /*3D layers*/
+                0px 0px 1px rgb(167,167,167),
+                0px 1px 1px rgb(167,167,167),
+                0px 2px 1px rgb(167,167,167),
+                1px 1px 1px rgb(167,167,167),
+                1px 2px 1px rgb(167,167,167),
+                1px 3px 1px rgb(167,167,167),
+                2px 2px 1px rgb(167,167,167),
+                2px 3px 1px rgb(167,167,167),
+                2px 4px 1px rgb(167,167,167),
+                1px 10px 30px rgba(0,0,0,0.8),
+                1px 10px 70px rgba(0,0,0,0.8),
+                    /*short soft bottom*/
+                0px 5px 5px rgba(0,0,0,0.8),
+                    /*left shadow*/
+                -5px 5px 20px rgba(0,0,0,0.8),
+                    /*right shadow*/
+                5px 5px 20px rgba(0,0,0,0.8),
+                1px 1px 120px rgba(255,255,255,0.5);
+        position: relative;
+    }
+    .emboss-txt::after {
+        font-size: 180px;
+        letter-spacing: 5px;
+        font-family: dock11;
+        position: absolute;
+        top:0;
+        left:0;
+        text-shadow: 0px 0px 100px rgba(11,124,199,0.5);
+        animation: cycle 10s linear infinite;
+    }
+    @keyframes cycle {
+        0% { text-shadow: 0px 0px 100px rgba(11,124,199,0.5);}
+        20% { text-shadow: 0px 0px 100px rgba(168,11,199,0.5);}
+        40% { text-shadow: 0px 0px 100px rgba(11,199,96,0.5);}
+        60% { text-shadow: 0px 0px 100px rgba(199,11,11,0.5);}
+        80% { text-shadow: 0px 0px 100px rgba(199,96,11,0.5);}
+    }
 
     body{
-        background-color: black;
+
     }
 </style>
 </html>
